Changes made from the "0.7.0" release to the "0.8.0" release:
-------------------------------------------------------------

* Bertrand Coconnier:

- Feature request #2725659 - Added extension GLC_QSO_render_parameter to tweak
  the curve tesselation tolerance.
- Fixed bug #2019450 (added a workaround for open source drivers of the Intel
  chipsets : a bug in the drivers prevent a character to be displayed).
- Fixed a bug which caused some memory leaks when memory allocation failed
  during the update of the masters.
- Updated the demo in the examples: extrusion and ligthing have been added.
- Optimized calls to glNormal3f(). It is now called once per string rather than
  once per character (except for extrusion).
- Refactored code of object __GLCmaster.
- Maximum character metrics obtained from glcGetMaxCharMetric() are now cached.
- Code refactoring between glcGetMaxCharMetric() and the other measurement
  commands in order to maximize common code for easier maintenance.
- Fixed glcGetFontMap() and glcGetMasterMap() so that their return is not null
  when a character is mapped in the font/master but its Unicode name is not
  stored in QuesoGLC database.
- Character codes out of range are now rejected when GLC_UCS1 or GLC_UCS2 are
  enabled. GLC_PARAMETER_ERROR is then raised.
- Fixed a bug that crashed QuesoGLC when trying to call glcGetFontMap() with a
  character not mapped in the font.
- Fixed a bug which caused the measurement caches not to be updated when
  GLC_RESOLUTION was changed by the users.
- Fixed a memory leak in the management of the texture atlas: when a font was
  deleted, the memory allocated to this font in the atlas was definitely lost
  instead of being given back to the texture allocator.
- Fixed a bug which did not include trailing spaces in the calculation of
  bounding boxes.
- Fixed a bug which caused artifacts when rendering glyphes that extend beyond
  the EM square.